--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ main()
 }
 </script>
 
-<script type="text/javascript" src="/webgl-utils.js"></script>
-<script type="text/javascript" src="/initShaders.js"></script>
-<script type="text/javascript" src="/MV.js"></script>
+<script type="text/javascript" src="webgl-utils.js"></script>
+<script type="text/javascript" src="initShaders.js"></script>
+<script type="text/javascript" src="MV.js"></script>
 <script type="text/javascript" src="cube.js"></script>
 
 <body>
